# collection-bench

./: Cargo.toml
benches/: contains_string.rs  contains_trivial.rs  dedup_string.rs  dedup_trivial.rs  group_by_string.rs  group_by_trivial.rs  sort_and_dedup_string.rs  sort_and_dedup_trivial.rs
